--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>Five Largest Protests in U.S. History</h1>
 
 <figure>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Minneapolis_05-28-20_%2849947863357%29.jpg/1024px-Minneapolis_05-28-20_%2849947863357%29.jpg" width="400px" height="300px"> <alt="Protesters in Minneapolis on May 28, 2020, three days after the killing of George Floyd.">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Minneapolis_05-28-20_%2849947863357%29.jpg/1024px-Minneapolis_05-28-20_%2849947863357%29.jpg" alt="Protesters in Minneapolis on May 28, 2020, three days after the killing of George Floyd." width="400px" height="300px">
 	<figcaption>A protest in summer 2020 after George Floyd was killed by police in Minneapolis (Wikipedia).</figcaption>
 </figure>
 
